# forwarded

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  api-mapping.md  dependency-analysis.md  divergences.md  port-checklist.md  research.md  test-plan.md
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: forwarded.rst  index.rst
docs/sphinx/examples/: index.rst  parse-header.rst  request-adapter.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: index.rst  request-adapter-boundary.rst
docs/sphinx/tutorials/: index.rst  parse-forwarded-for.rst
examples/: parse_header.cpp  request_adapter.cpp
include/polycpp/forwarded/: forwarded.hpp
include/polycpp/forwarded/detail/: aggregator.hpp
src/: forwarded.cpp
tests/: test_smoke.cpp
